--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <!-- hero/jumbotron -->
         <section>
             <div>
-                <h3>Get Started TodaY</h3>
+                <h3>Get Started Today</h3>
                 <p>Fill out this form and one of our trainer will schedule a consult</p> 
                 <form>
                     <label for="name">Enter full name:</label>
