styled 'What We Do'

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </section>
         
         <!-- "whate we do" section-->
-        <section id="what-we-do">
+        <section id="what-we-do" class="intro">
             <h2>What We Do</h2>
             <p>
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ratione repellendus sint neque perspiciatis dolorem possimus maxime nostrum odit aliquam, consequatur exercitationem sequi quis delectus. Nesciunt voluptas totam pariatur id modi.
