--- a/index.html
+++ b/index.html
@@ -62,15 +62,15 @@
         
         <!-- "whate we do" section-->
         <section id="what-we-do" class="intro">
-            <h2>What We Do</h2>
+            <h2 class="section-title primary-border">What We Do</h2>
             <p>
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ratione repellendus sint neque perspiciatis dolorem possimus maxime nostrum odit aliquam, consequatur exercitationem sequi quis delectus. Nesciunt voluptas totam pariatur id modi.
             </p>
         </section>
 
         <!-- "what you do" section-->
-        <section id="what-you-do">
-            <h2>What You Do</h2>
+        <section id="what-you-do" class="steps">
+            <h2 class="section-title secondary-border">What You Do</h2>
           
             <div>
               <img src="./assets/images/step-1.svg" alt="" />
