meet the trainers section

--- a/index.html
+++ b/index.html
@@ -98,8 +98,41 @@
           </section>
 
         <!-- "meet the trainers" section-->
-        <section>
-            <h2>Meet the Trainers</h2>
+        <section id="your-trainers" class="trainers">
+            <h2 class="section-title primary-border">Meet the Trainers</h2>
+            <!-- 1st Trainer Bio -->
+            <article  class="trainer">
+                <img src="./assets/images/trainer-1.jpg" alt="Aaron Stephens in his workout cloths, ready to pump iron." />
+                <div class="trainer-bio text-left">
+                    <h3>Aaron Stephens</h3>
+                    <h4>Speed / Strength</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime minus consequuntur, dolorem, facere alias eveniet numquam omnis ex sed earum sint atque illum labore similique sit eligendi quis. Unde, officia.
+                    </p>
+                </div>
+            </article>
+            <!-- 2nd Trainer Bio -->
+            <article class="trainer">
+                <div class="trainer-bio text-right">
+                    <h3>Joanna Gill</h3>
+                    <h4>Endurance</h4>
+                    <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus harum quasi quisquam? Fugiat, excepturi fuga ad possimus, totam perferendis doloremque ab sequi ratione, inventore id iusto labore? Totam, illo asperiores.
+                    </p>
+                </div>
+                <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
+            </article>
+            <!-- 3rd Trainer Bio -->
+            <article class="Trainer">
+                <img src="./assets/images/trainer-2.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights" />
+                <div class="trainer-bio text-left">
+                    <h3>Harry "the Headband" Smith</h3>
+                    <h4>Strength</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, mollitia! Amet sapiente natus nam non recusandae possimus. Reprehenderit maxime rerum nobis, repellat molestiae quis dolore culpa itaque voluptas. Commodi, dolores?
+                    </p>
+                </div>
+            </article>
         </section>
         
         <!-- "reach out" section -->
