--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 </head>
     
 <body>
-    <!-- navigation -->
-    <header>
-        <h1> 
-            <a href="/">
-                RUN BUDDY
-            </a>
+  <!-- navigation -->
+  <header>
+    <h1> 
+      <a href="/">
+        RUN BUDDY
+      </a>
         </h1>
         <nav>
           <!-- Unordered list elements-->
@@ -32,12 +32,18 @@
             <li>
               <a href="#reach-out">Your Trainers</a>
             </li>
-           </ul>
-            </nav>
-        </header>
+          </ul>
+        </nav>
+  </header>
         
         <!-- hero/jumbotron -->
         <section class="hero">
+          <div class="hero-cta">
+            <h2>Start Building Habits.</h2>
+            <p>
+              seitan heirloom post-ironic pop-up iPhone mlkshk hella selfies fashion axe occupy readymade put a bird on it messenger bag Wes Anderson Schlitz plaid Bushwick church-key lo-fi skateboard slow-carb hashtag trust fund Williamsburg biodiesel fixie farm-to-table 8-bit banjo XOXO Banksy chillwave bicycle rights retro cliche tattooed bespoke irony mumblecore Shoreditch deep v polaroid McSweeney's bitters cray gentrify tofu Marfa you probably haven't heard of them yr banh mi asymmetrical art party selvage letterpress High Life.
+            </p>
+          </div>
             <div class="hero-form">
                 <h3>Get Started Today</h3>
                 <p>Fill out this form and one of our trainer will schedule a consult</p> 
