--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     
 <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, intial-scale=1.0" />
     <title> Run Buddy </title>
 </head>
     
