--- a/index.html
+++ b/index.html
@@ -58,17 +58,23 @@
               <label for="phone">Enter a telephone number:</label>
               <input type="tel" placeholder="Phone Number" name="phone" id="phone" class="form-input" >
                 <p>
-                   Have you worker out with a trainer before?
-                    <input type="radio" name="trainer-conrim" id="trainer-yes" />
-                    <label for="trainer-yes">Yes</label>
-                    <input type="radio" name="trainer-confirm" id="trainer-no" />
-                    <label for="trainer-no">No</label>
+                  Have you worker out with a trainer before?
+                  <span class="radio-wrapper">
+                   <input type="radio" name="trainer-conrim" id="trainer-yes" />
+                   <label for="trainer-yes">Yes</label>
+                  </span>
+                  <span class="radio-wrapper">
+                   <input type="radio" name="trainer-confirm" id="trainer-no" />
+                   <label for="trainer-no">No</label>
+                  </span>
                 </p>
                 <p>
-                  <label for="checkbox">
-                    I acknoewledge that I am at least 18 years of age.
-                  </label>
-                  <input type="checkbox" name="age-confirm" id="checkbox" />
+                  <span class="checkbox-wrapper">
+                    <input type="checkbox" name="age-confirm" id="checkbox" />
+                    <label for="checkbox">
+                      I acknoewledge that I am at least 18 years of age.
+                    </label>
+                  </span>
                 </p>
                   <button type="submit">
                     Get running!
@@ -107,7 +113,7 @@
             </div> 
           </div>
 
-          
+
             <div class="step">
               <h3>Step 2.</h3>
               <div class="step-info">
