--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                   <span class="checkbox-wrapper">
                     <input type="checkbox" name="age-confirm" id="checkbox" />
                     <label for="checkbox">
-                      I acknoewledge that I am at least 18 years of age.
+                      I acknowledge that I am at least 18 years of age.
                     </label>
                   </span>
                 </p>
